<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="660dp"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingStart="10dp"
    android:paddingEnd="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Turn-On Accessibility Settings"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="24dp"
        android:layout_marginBottom="16dp"/>



    <ScrollView
        android:id="@+id/scrollability"
        android:layout_width="match_parent"
        android:layout_height="660dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Why Do I Need To Turn It On?"
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_margin="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/importance_of_accessibility"
                android:textSize="14dp"
                android:layout_margin="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="How Do I Turn It On?"
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_margin="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="For Android 12 And Lower:"
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_margin="15dp"/>


            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@raw/first" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_step"
                android:textSize="14dp"
                android:layout_margin="15dp"/>

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@raw/second" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/third_step"
                android:textSize="14dp"
                android:layout_margin="15dp"/>

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@raw/third" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fourth_step"
                android:textSize="14dp"
                android:layout_marginBottom="10dp"
                android:layout_margin="15dp"/>

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@raw/fourth" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fifth_step"
                android:textSize="14dp"
                android:layout_marginTop="10dp"
                android:layout_margin="15dp"/>

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@raw/fifth" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="For Android 13 And Higher:"
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_margin="15dp"/>

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@raw/sixth" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sixth_step"
                android:textSize="14dp"
                android:layout_marginTop="10dp"
                android:layout_margin="15dp"/>

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@raw/seventh" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seventh_step"
                android:textSize="14dp"
                android:layout_marginTop="10dp"
                android:layout_margin="15dp"/>

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@raw/eight" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eight_step"
                android:textSize="14dp"
                android:layout_marginTop="10dp"
                android:layout_margin="15dp"/>

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@raw/ninth"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ninth_step"
                android:textSize="14dp"
                android:layout_marginTop="10dp"
                android:layout_margin="15dp"/>

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@raw/tenth"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tenth_step"
                android:textSize="14dp"
                android:layout_marginTop="10dp"
                android:layout_margin="15dp"/>

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@raw/eleventh"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eleventh_step"
                android:textSize="14dp"
                android:layout_marginTop="10dp"
                android:layout_margin="15dp"/>

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@raw/twelveth"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/twelveth_step"
                android:textSize="14dp"
                android:layout_marginTop="10dp"
                android:layout_margin="15dp"/>

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@raw/thirteenth"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thirteenth_step"
                android:textSize="14dp"
                android:layout_marginTop="10dp"
                android:layout_margin="15dp"/>

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@raw/fourteneth"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fourteenth_step"
                android:textSize="14dp"
                android:layout_marginTop="10dp"
                android:layout_margin="15dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>


